--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
 }
 .mainDiv{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)), url("../Photo/pcSetup.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/pcSetup.jpg");
     background-size: cover; 
     background-position: center;
     background-color: rgba(0, 0, 0, 0.5);
@@ -30,7 +30,7 @@ footer{
     padding: 30px;
 }
 .navBar{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
     position: absolute;
     top: 0;
     left: 0;
@@ -75,5 +75,24 @@ footer{
 }
 p{
     font-family: 'VT323', monospace;
+}
+.PC1{
+    width: 380px;
+    height: 420px;
+}
+.image-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.keyboard {
+    width: 35%; /* Adjust the width as needed */
+}
+hr{
+    border-style: dotted none none;
+    border-width: 10px;
+    width: 10%;
+    
+    margin: 10px auto;
 }
   
