--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -86,13 +86,13 @@ p{
     justify-content: center;
 }
 .keyboard {
-    width: 35%; /* Adjust the width as needed */
+    width: 35%;
 }
 hr{
     border-style: dotted none none;
     border-width: 10px;
     width: 10%;
-    
+    color: rebeccapurple;
     margin: 10px auto;
 }
   
