--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -92,7 +92,7 @@ hr{
     border-style: dotted none none;
     border-width: 10px;
     width: 10%;
-    color: rebeccapurple;
+    color: rgb(91, 43, 139);
     margin: 10px auto;
 }
   
