--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -24,7 +24,8 @@ body{
     background-color: yellow;
     color: white;
 }
-footer{
+footer-clean{
+    display: flex;
     background-color: aqua;
     color: white;
     padding: 30px;
