--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -78,12 +78,12 @@ p{
 }
 .PC1{
     width: 380px;
-    height: 420px;
+    height: 400px;
 }
 .image-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: left;
 }
 .keyboard {
     width: 35%;
@@ -97,4 +97,44 @@ hr{
 }h1,h2,h3{
     font-family: 'VT323', monospace;
 }
+.search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    float: right;
+    margin-right: 100px;
+    background-color:aliceblue ;
+    height: 280px;
+    width: 300px;
+  }
+  .search-container label {
+    margin-right: 10px;
+    font-weight: bold;
+    color: black;
+  }
+  .search-container p {
+    margin-right: 10px;
+    font-weight: bold;
+    color: black;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  
+  .search-container select {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-right: 10px;
+    width: 60%;
+  }
+  
+  .search-container select option {
+    padding: 5px;
+  }
+  
+  .search-container select:focus {
+    outline: none;
+    border-color: #555;
+  }
+  
+
   
