--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -85,6 +85,39 @@ p{
     padding-right: 150px;
 }
 
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: black;
+  }
+  
+  .card {
+    display: flex;
+    align-items: center;
+    max-width: 500px;
+    margin: 20px;
+    background-color: white;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    width: calc(50% - 40px); /* Adjusted width to occupy 50% of the row with margin included */
+  }
+  
+  .card-text {
+    flex-grow: 1;
+    padding: 20px;
+  }
+  
+  .inside-container {
+    width: 200px;
+    height: 150px;
+  }
+  
+  .btn {
+    border-radius: 15px;
+    padding: 5px 15px;
+    background-color: rgb(100, 23, 151);
+  }
+
 /* End of that css*/
 .PC1{
     width: 380px;
