added responsiveness on navbar

--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -241,9 +241,24 @@ hr{
   
   /* media*/
 
-  @media only screen and (max-width: 500px;  ){ 
-  }
-  
+
+.navBar .toggle-button {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .navBar a:not(.toggle-button) {
+        display: none;
+    }
+
+    .navBar .toggle-button {
+        display: block;
+    }
+
+    .navBar.active a:not(.toggle-button) {
+        display: block;
+    }
+}
   
 
   
