--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -21,34 +21,82 @@ body{
     color: white;
 }
 .latestThings{
-    padding: 30px;
-    background-color: yellow;
-    color: white;
+  padding: 30px;
+  display: flex;
+  color: whitesmoke;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/Lightstudio-desktop.jpg");
+  background-size: cover; 
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.column{
+  flex: 50%;
+  padding: 30px;
+  margin: 30px;
+  align-items:center;
+
+}
+.about{
+  font-family: sans-serif;
+  font-size: 25px;
+}
+.foto-about{
+  width: 350px;
+  border-radius: 360px;
+  float:right;
+}
+.button {
+  text-decoration: none;
+  color: white;
+  background: rgb(145, 92, 182);
+  padding: 15px 40px;
+  border-radius: 4px;
+  font-weight: normal;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+}
+.glow-button:hover {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 5px 15px rgb(133, 29, 207);
 }
 
-.navBar{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 10px 30px 30px 30px;
-    color: white;
-    text-align: center;
+.navBar {
+  background-color: black;
+  padding: 20px;
+  text-align: center;
 }
-.navBar a{
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-    padding: 0 10px;
+
+.navBar a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  border-radius: 4px;
 }
-.navBar a:hover{
-    color: purple;
-    
+
+.navBar a:hover {
+  background-color: #555;
 }
-.navBar a:visited {
-    border-bottom: 2px solid purple;
+
+.navBar a.active {
+  background-color: #777;
 }
+
+/* Add a subtle gradient background effect */
+.navBar {
+  background: linear-gradient(to right, #222, #333);
+}
+
+/* rebeccaBlue = rgb(102 51 153) */
+
+/* Apply a different style to the last link in the navigation */
+.navBar a:last-child {
+  background-color: rebeccapurple;
+  color: #fff;
+}
+
 .pcBrands{
     background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4)), url("../Photo/setup2.jpeg");
     background-size: cover; 
@@ -119,6 +167,7 @@ p{
     /* Set a fixed height or a maximum height for the container */
     max-height: 1000px; /* Adjust the height as needed */
     position: relative;
+    overflow: hidden;
   }
   
 /* End of that css*/
