--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -10,6 +10,40 @@ body{
     padding: 30px;
     color: white;
 }
+.navBar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent; /* Set the background to transparent */
+  padding: 10px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 16px;
+}
+.navBar a {
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  transition: background-color 0.3s ease;
+  border-radius: 4px;
+}
+.navBar a:hover {
+  background-color: #555;
+}
+.navBar a.active {
+  background-color: #777;
+}
+/* Add a subtle gradient background effect */
+.navBar {
+  background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)); /* Apply a gradient with transparency */
+}
+
+
 .pcBrands{
     padding: 30px;
     background-color: purple;
@@ -66,45 +100,6 @@ body{
     background-position: center;
     background-color: rgba(0,0,0,0.5);
 }
-
-
-.navBar {
-  background-color: black;
-  padding: 20px;
-  text-align: center;
-}
-
-.navBar a {
-  color: #fff;
-  text-decoration: none;
-  padding: 10px 20px;
-  margin: 0 5px;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
-  border-radius: 4px;
-}
-
-.navBar a:hover {
-  background-color: #555;
-}
-
-.navBar a.active {
-  background-color: #777;
-}
-
-/* Add a subtle gradient background effect */
-.navBar {
-  background: linear-gradient(to right, #222, #333);
-}
-
-/* rebeccaBlue = rgb(102 51 153) */
-
-/* Apply a different style to the last link in the navigation */
-.navBar a:last-child {
-  background-color: rebeccapurple;
-  color: #fff;
-}
-
 .pcBrands{
     background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4)), url("../Photo/setup2.jpeg");
     background-size: cover; 
@@ -129,7 +124,6 @@ body{
 p{
     font-family: 'VT323', monospace;
 }
-  
 /* Per div-in e dyte*/
 .image-row {
     display: flex;
@@ -281,6 +275,26 @@ hr{
     .navBar.active a:not(.toggle-button) {
         display: block;
     }
+    .image-container .keyboard{
+      display: none;
+    }
+    .image-container .PC1{
+      height: 250px;
+      width: 250px;
+    }
+    .search-container{
+      height: 460px;
+      width: 220px;
+    }
+}
+@media screen and(min-width: 768px){
+  .image-container .keyboard{
+    display: none;
+  }
+  .image-container .PC1{
+    height: 300px;
+    width: 300px;
+  }
 }
   
 
