--- a/CSS/AbouUs.css
+++ b/CSS/AbouUs.css
@@ -1,5 +1,77 @@
-.container{
+.first-part{
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/background1.jpg");
     background-color: #180032;
     padding: 70px 0;
+    color: white;
+    text-align: center;
 }
+.about{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: white;
+    margin: 40px;
+}   
+.abt-txt{
+    font-family: sans-serif;
+    font-size: 20px;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 20px;
+    text-align: justify;
+    /* bej brenda div paragrafin dhe jepi height dhe width te njejte*/
+}
+.abt-photo{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    box-shadow:
+      inset 0 0 50px #fff,     
+      inset 20px 0 80px #f0f,   
+      inset -20px 0 80px #0ff,  
+      inset 20px 0 300px #f0f,  
+      inset -20px 0 300px #0ff, 
+      0 0 50px #fff,            
+      -10px 0 80px #f0f,        
+      10px 0 80px #0ff;
+}
+.abt-title{
+    font-size: 70px;
+    font-family: cursive;
+}
+.team-carousel {
+    display: flex;
+    overflow-x: hidden;
+    
+  }
+  
+  .team-slide {
+    flex: 0 0 300px;
+    padding: 20px;
+    text-align: center;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .team-slide img {
+    border-radius: 50%;
+    max-width: 150px;
+    height: auto;
+    margin: 0 auto 10px;
+  }
+  
+  .team-slide h3 {
+    margin: 0;
+    font-size: 20px;
+  }
+  
+  .team-slide p {
+    margin: 0;
+    color: #888;
+    
+  }
+.team-mem{
+    background-color: white;
+    border-radius: 40px;
+    height: 100px;
+    width: 100px;
+}  
