--- a/CSS/catalogPageCard.css
+++ b/CSS/catalogPageCard.css
@@ -325,7 +325,7 @@ body{
   }
 }
 
-.btn-success {
+.btn-success, .btn-success:focus, .btn-success:active {
   color: #fff;
   background-color: purple;
   border-color: purple;
