--- a/CSS/catalogPageCard.css
+++ b/CSS/catalogPageCard.css
@@ -1,7 +1,8 @@
 body{
-  margin-top:20px;
+  margin-top:0;
   background:#eee;
 }
+
 .secondDiv{
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/background1.jpg");
 	background-color: #180032;
