--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -2,11 +2,14 @@
 body{
     margin: 0;
 }
+.bg-main{
+  padding: 70px 0;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/bg.jpg");
+  background-color: #180032;
+  background-size: cover;
+}
 .mainDiv{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/pcSetup.jpg");
-    background-size: cover; 
-    background-position: center;
-    background-color: rgba(0, 0, 0, 0.5);
+  
     padding: 30px;
     color: white;
 }
@@ -21,26 +24,34 @@ body{
   padding: 30px;
   display: flex;
   color: whitesmoke;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/Lightstudio-desktop.jpg");
-  background-size: cover; 
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0.5);
+
 }
 .column{
-  flex: 50%;
-  padding: 30px;
-  margin: 30px;
+  padding: 20px;
+  
   align-items:center;
 
 }
 .about{
   font-family: sans-serif;
-  font-size: 25px;
+  font-size: 30px;
+  border-radius: 20px;
+  text-align: justify;
+  line-height: 30px;
 }
 .foto-about{
-  width: 350px;
-  border-radius: 360px;
-  float:right;
+  width: 400px;
+  height: 400px;
+  border-radius: 7%;
+  box-shadow:
+    inset 0 0 50px #fff,     
+    inset 20px 0 80px #f0f,   
+    inset -20px 0 80px #0ff,  
+    inset 20px 0 300px #f0f,  
+    inset -20px 0 300px #0ff, 
+    0 0 50px #fff,            
+    -10px 0 80px #f0f,        
+    10px 0 80px #0ff;
 }
 .button {
   text-decoration: none;
@@ -54,22 +65,16 @@ body{
 }
 .glow-button:hover {
   color: rgba(255, 255, 255, 1);
-  box-shadow: 0 5px 15px rgb(133, 29, 207);
+  box-shadow: 0 5px 5px rgb(133, 29, 207);
     padding: 30px;
     display: flex;
     color: whitesmoke;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.8)),url("../Photo/Lightstudio-desktop.jpg");
-    background-size: cover;
-    background-position: center;
-    background-color: rgba(0,0,0,0.5);
+  background-color: transparent;
 }
 .pcBrands{
-    background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4)), url("../Photo/setup2.jpeg");
-    background-size: cover; 
-    background-position: center;
-    background-color: rgba(0, 0, 0, 0.5);
+
     padding: 30px;
-    background-color: purple;
+    
     color: white;
 }
 .image-row {
@@ -164,7 +169,7 @@ margin-bottom: 10px;
   .btn {
     border-radius: 15px;
     padding: 5px 15px;
-    background-color: rgb(100, 23, 151);
+   background-color: purple;
   }
 
   .swiper-container {
@@ -247,5 +252,35 @@ hr{
   .image-container .PC1{
     height: 300px;
     width: 300px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .aboutUs,
+  .latestThings,
+  .column {
+    padding: 15px;
+  }
+
+  .about {
+    font-size: 24px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+    line-height: 26px;
+  }
+
+  .foto-about {
+    width: 100%;
+    height: auto;
+    max-width: 400px; /* You can adjust this based on your design preferences */
+    margin: 0 auto; /* Center the element horizontally */
+  }
+
+  .button {
+    padding: 10px 30px;
+  }
+
+  .glow-button:hover {
+    padding: 20px;
   }
 }
