--- a/CSS/catalogPageCard.css
+++ b/CSS/catalogPageCard.css
@@ -1,12 +1,12 @@
 body{
-  margin-top:0;
+  margin:0;
   background:#eee;
 }
 
 .secondDiv{
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/background1.jpg");
 	background-color: #180032;
-    padding: 70px 0;
+  
 }
 .product-content:hover{
   transform: scale(1.1);
