--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -55,7 +55,7 @@
     position: absolute;
     width: 100%;
     height: 2px;
-    background: #4a47a3; 
+    background: rebeccapurple; 
     bottom: 0;
     left: 0;
     transform: scaleX(0);
@@ -79,6 +79,7 @@
     justify-content: center;
     color: #fff;
     font-size: 16px;
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)); 
   }
   .navBar a {
     color: #fff;
@@ -95,6 +96,3 @@
     background-color: #777;
   }
   
-  .navBar {
-    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2)); 
-  }
