--- a/CSS/catalogPageCard.css
+++ b/CSS/catalogPageCard.css
@@ -309,27 +309,6 @@ body{
   width: calc(100% - 70px)
 }
 
-@media only screen and (min-width:1024px) {
-  .product-content div[class*=col-md-4] {
-      padding-right: 0
-  }
-  .product-content div[class*=col-md-8] {
-      padding: 0 13px 0 0
-  }
-  .product-wrap div[class*=col-md-5] {
-      padding-right: 0
-  }
-  .product-wrap div[class*=col-md-7] {
-      padding: 0 13px 0 0
-  }
-  .product-content .product-image {
-      border-right: 1px solid #dfe5e9
-  }
-  .product-content .product-info {
-      position: relative
-  }
-}
-
 .btn-success, .btn-success:focus, .btn-success:active {
   color: #fff;
   background-color: purple;
@@ -379,4 +358,31 @@ body{
   padding: 10px;
   background-color: #fff;
 }
-
+@media only screen and (min-width:768px) {
+  .product-content div[class*=col-md-4] {
+      padding-right: 0
+  }
+  .product-content div[class*=col-md-8] {
+      padding: 0 13px 0 0
+  }
+  .product-wrap div[class*=col-md-5] {
+      padding-right: 0
+  }
+  .product-wrap div[class*=col-md-7] {
+      padding: 0 13px 0 0
+  }
+  .product-content .product-image {
+      border-right: 1px solid #dfe5e9
+  }
+  .product-content .product-info {
+      position: relative
+  }
+}
+@media only screen and (max-width: 600px) {
+  .searchproducts {
+    max-width: 100%; 
+    position: static; 
+    margin: 20px; 
+    right: 0;
+  }
+}
