--- a/CSS/AbouUs.css
+++ b/CSS/AbouUs.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 .first-part{
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/bg.jpg");
     background-color: #180032;
