--- a/CSS/contactUs.css
+++ b/CSS/contactUs.css
@@ -17,7 +17,7 @@ body{
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    margin-top: 160px;
+    margin-top: 80px;
     margin-right: 500px;
     background-color: white;
     z-index: 2;
@@ -46,7 +46,7 @@ body{
   
   button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: rebeccapurple;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -54,13 +54,14 @@ body{
   }
   
   button:hover {
-    background-color: #45a049;
-  }
+    background-image: url("../Photo/bg.jpg");
+    }
 
   .figureContainer{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 80px;
   }
   .figure1{
     background-color: whitesmoke;
@@ -106,6 +107,7 @@ body{
     font-size: 50px;
   }
   .contactH1{
+    padding-top: 20px;
     text-align: center;
     font-family: 'VT323', monospace;
     color: white;
@@ -128,5 +130,8 @@ body{
   }
   .mapContainer{
     padding-top: 300px;
+  }
+  #message{
+    resize: none;
   }
   
