--- a/CSS/AbouUs.css
+++ b/CSS/AbouUs.css
@@ -1,6 +1,7 @@
-body{
+body {
   margin: 0;
 }
+
 .first-part {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/bg.jpg");
   background-color: #180032;
@@ -48,21 +49,39 @@ body{
 
 .abt-title {
   font-size: 70px;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  line-height: 40px;
 }
 
-.team-carousel {
-  display: flex;
-  overflow-x: hidden;
 
+.team {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .team-slide {
-  flex: 0 0 300px;
-  padding: 20px;
-  text-align: center;
-  transition: transform 0.3s ease-in-out;
+  background-color: whitesmoke;
+  height: 300px;
+  width: 20%;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 70px;
+  font-weight: bold;
+  padding: 10px;
+  box-shadow:
+    inset 20px 0 80px white,
+    inset -20px 0 80px darkslateblue,
+    inset 20px 0 300px white,
+    inset -20px 0 300px darkslateblue;
+
+}
+
+.team-slide:hover {
+  background-color: darkslateblue;
 }
 
 .team-slide img {
@@ -75,13 +94,14 @@ body{
 .team-slide h3 {
   margin: 0;
   font-size: 20px;
+  color: black;
 }
 
-.team-slide p {
-  margin: 0;
-  color: #888;
-
+h4 {
+  color: black;
 }
+
+
 
 .team-mem {
   background-color: white;
@@ -108,46 +128,58 @@ body{
   height: 400px !important;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .about {
     flex-direction: column;
+    margin: 20px;
   }
 
   .abt-photo {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
   }
 
+  .team-slide {
+    width: 40%;
+    margin: 10px;
+  }
+
+  .team-slide img {
+    max-width: 120px;
+    margin-bottom: 5px;
+
+    .abt-title {
+      font-size: 50px;
+      line-height: 30px;
+    }
+
+    .abt-txt {
+      font-size: 18px;
+    }
+
+    h4 {
+      font-size: 18px;
+    }
+  }
+}
+
+
+@media screen and (max-width: 480px) {
   .abt-title {
     font-size: 40px;
+    line-height: 25px;
   }
 
   .abt-txt {
     font-size: 16px;
-    padding: 5px;
-    margin: 5px;
   }
 
-  .team-carousel {
-    overflow-x: auto;
-  }
-
-  .team-slide {
-    flex: 0 0 80%;
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  .team-slide img {
-    max-width: 100px;
-  }
-
-  .team-slide h3 {
+  h4 {
     font-size: 16px;
   }
 
-  .mapouter,
-  .gmap_canvas {
-    height: 300px;
+  .team-slide {
+    width: 90%;
+    margin: 10px;
   }
 }
