--- a/CSS/contactUs.css
+++ b/CSS/contactUs.css
@@ -60,15 +60,6 @@ body{
     border-radius: 5px;
   }
   
-  button {
-    padding: 10px 20px;
-    background-color: rebeccapurple;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
   button:hover {
     background-image: url("../Photo/bg.jpg");
     }
@@ -79,14 +70,14 @@ body{
     align-items: center;
     padding-top: 80px;
   }
-  .figure1{
+  .figure1,.figure2,.figure3{
     background-color: whitesmoke;
     height: 300px;
     width: 20%;
     margin: 20px;
     display: flex;
     flex-direction: column; 
-    justify-content: flex-start; 
+    justify-content: center; 
     align-items: center;
     border-radius: 5px;
     font-weight: bold;
@@ -101,64 +92,19 @@ body{
     2.5px 0 10px #0ff;
     opacity: 0;
     transform: translateX(60px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: opacity 0.6s ease, transform 0.5s ease-in;
+  }
+  .card-content {
+    text-align: center;
   }
   .figure1.show {
     opacity: 1;
     transform: translateX(0);
 }
-  .figure2{
-    background-color: whitesmoke;
-    height: 300px;
-    width: 20%;
-    margin: 20px;
-    display: flex;
-    flex-direction: column; 
-    justify-content: flex-start; 
-    align-items: center;
-    border-radius: 5px;
-    font-weight: bold;
-    box-shadow:
-    0 0 5px #fff,     
-    5px 0 10px #f0f,   
-    -5px 0 10px #0ff,  
-    5px 0 30px #f0f,  
-    -5px 0 30px #0ff, 
-    0 0 5px #fff,            
-    -2.5px 0 10px #f0f,        
-    2.5px 0 10px #0ff;
-    opacity: 0;
-    transform: translateX(60px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
   .figure2.show {
     opacity: 1;
     transform: translateX(0);
 }
-  .figure3{
-    background-color: whitesmoke;
-    height: 300px;
-    width: 20%;
-    margin: 20px;
-    display: flex;
-    flex-direction: column; 
-    justify-content: flex-start; 
-    align-items: center;
-    border-radius: 5px;
-    font-weight: bold;
-    box-shadow:
-    0 0 5px #fff,     
-    5px 0 10px #f0f,   
-    -5px 0 10px #0ff,  
-    5px 0 30px #f0f,  
-    -5px 0 30px #0ff, 
-    0 0 5px #fff,            
-    -2.5px 0 10px #f0f,        
-    2.5px 0 10px #0ff;
-    opacity: 0;
-    transform: translateX(60px);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
   .figure3.show {
     opacity: 1;
     transform: translateX(0);
@@ -321,11 +267,11 @@ textarea {
 button {
   padding: 10px 20px;
   background-color: rebeccapurple;
-  color: #fff;
+  color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
+  
 }
 
 button:hover {
@@ -333,6 +279,7 @@ button:hover {
 }
 /* Mobile devices */
 @media only screen and (max-width: 600px) {
+  
   .contactUsBg {
     height: auto;
     background-position: center;
@@ -346,7 +293,7 @@ button:hover {
   .figure1,
   .figure2,
   .figure3 {
-    width: 90%;
+    width: 80%;
     margin: 20px auto;
   }
 
@@ -359,9 +306,10 @@ button:hover {
   }
 
   .item {
-    width: 90%;
+    width: 65%;
     display: block;
-    margin: 20px auto;
+    margin: 30px auto;
+    
     filter: none;
   }
 
@@ -409,6 +357,35 @@ button:hover {
 
   .footer-col {
     width: 25%;
+  }
+  .wrapper {
+    padding-top: 100px;
+  }
+
+  .item {
+    width: 30%;
+    display: block;
+    margin: 20px auto;
+    filter: none;
+  }
+  #item1{
+    width: 40%;
+  }
+  #item2{
+    width: 35%;
+  }
+
+  .item .polaroid:before {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    transform: rotate(0deg);
+    height: 40%;
+    width: 40%;
+    bottom: 0%;
+    right: 5%;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+    transition: all 0.35s;
   }
 }
 
