updated main page

--- a/CSS/parts.css
+++ b/CSS/parts.css
@@ -1,7 +1,7 @@
   
 
   body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/background.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)), url("../Photo/bg.jpg");
     background-color: #180032;
     background-size: cover;
   background-position: center;
