--- a/CSS/parts.css
+++ b/CSS/parts.css
@@ -82,3 +82,29 @@ swiper-slide img {
   justify-content: space-between;
 }
 
+/*test */
+
+.with-submenu::after {
+  content: '\f107'; /* Unicode for down arrow (Font Awesome icon) */
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  margin-left: 10px;
+}
+
+/* Submenu style */
+.submenu {
+  list-style-type: none;
+  padding: 0;
+  display: none;
+  background-color: #333;
+  position: absolute;
+}
+
+/* Adjustments to push "Miscellaneous" down when submenu is visible */
+.li.with-submenu {
+  position: relative;
+}
+
+.li.with-submenu .submenu {
+  top: 100%; /* Push the submenu below the parent li */
+}
