--- a/CSS/mainPage.css
+++ b/CSS/mainPage.css
@@ -62,19 +62,27 @@ body{
   text-decoration: none;
   color: white;
   background: rgb(145, 92, 182);
-  padding: 15px 40px;
+  padding: 15px 20px;
   border-radius: 4px;
   font-weight: normal;
   text-transform: uppercase;
   transition: all 0.2s ease-in-out;
 }
+
 .glow-button:hover {
   color: rgba(255, 255, 255, 1);
-  box-shadow: 0 5px 5px rgb(133, 29, 207);
+  box-shadow:
+    inset 0 0 50px #fff,     
+    inset 20px 0 80px #f0f,   
+    inset -20px 0 80px #0ff,  
+    inset 20px 0 300px #f0f,  
+    inset -20px 0 300px #0ff, 
+    0 0 50px #fff,            
+    -10px 0 80px #f0f,        
+    10px 0 80px #0ff;
     padding: 30px;
     display: flex;
-    color: whitesmoke;
-  background-color: transparent;
+ 
 }
 .pcBrands{
 
