--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poor+Story');
+
 .navbar .toggle-button{
     display: none;
   }
@@ -15,6 +17,7 @@
     margin-top: 80px; /* Replace 56px with the actual height of your expanded navbar */
   }
   
+  
   @media screen and (max-width: 768px) {
     
     .navBar a:not(.toggle-button) {
@@ -31,6 +34,21 @@
     .image-container .keyboard{
       display: none;
     }
+    .navBar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: transparent;
+      padding: 10px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-size: 16px;
+      background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2));
+  }
     
 
 .navBar::before {
@@ -91,7 +109,7 @@
     margin: 0 5px;
     transition: background-color 0.3s ease;
     border-radius: 4px;
-    font-family: 'VT323', monospace;
+    
   }
   .navBar a:hover {
     background-color: #555;
