--- a/CSS/parts.css
+++ b/CSS/parts.css
@@ -18,11 +18,14 @@
 
   
 .main-div {
-  display: flex; 
+  display: flex;
+
 }
 
 .sticky-container{
   padding-top: 18px;
+  padding-right: 60px;
+  padding-left: 10px;
 }
 
 .ul {
@@ -81,3 +84,4 @@ swiper-slide img {
   display: flex;
   justify-content: space-between;
 }
+
