--- a/CSS/flipcards.css
+++ b/CSS/flipcards.css
@@ -1,4 +1,10 @@
 
+.flip-card-front img{
+  width:250px;
+  height:250px;
+
+}
+
 .flip-card {
     background-color: transparent;
     width: 250px;
@@ -58,4 +64,31 @@
     list-style: disc;
     text-align: left;
     margin-left: 10px;
+  }
+
+  .main-content{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  @media screen and (max-width: 768px) {
+
+    .move{
+      margin-left: 10px;
+    }
+
+    .flip-card {
+      background-color: transparent;
+      width: 200px;
+      height: 200px;
+      perspective: 1000px;
+      padding-right: 30px;
+    }
+
+    .flip-card-front img{
+      width:200px;
+      height:200px;
+    
+    }
+  
   }
